# c-synth

./: .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  TODO.md
cmake/: version.h.in
include/: app.h  argparse.h  audio.h  audio_setup.h  buffer.h  dspmath.h  hashmap.h  log.h  midi.h  portmidi_helper.h  spsc.h  synth.h  thread.h  ui.h  ui_font_builtin.h  ui_widgets.h
shaders/: color.frag  color.vert  texture.frag  texture.vert
src/: app.c  argparse.c  audio.c  audio_setup.c  buffer.c  hashmap.c  log.c  main.c  portmidi_helper.c  sdl3_renderer.c  synth.c  thread.c  ui_registry.c  ui_widgets.c
tests/: dspmath_test.c
tools/software_piano/: piano.py
